--- a/styles/how-to-section-part.css
+++ b/styles/how-to-section-part.css
@@ -17,14 +17,14 @@
 
 .how-to-section-desc1 {
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 600;
     line-height: 30px;
 }
 
 .how-to-section-desc2 {
     font-size: 16px;
     line-height: 24px;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .hts-editor-ide {
@@ -35,6 +35,8 @@
     display: flex;
     flex-direction: column;
     border-radius: 5px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 
     .hts-ide-top {
         display: flex;
@@ -95,4 +97,142 @@
 
 .hts-ide-input input::placeholder {
     color: rgb(102, 102, 102);
+}
+
+/* Here Starts CSS Directly From W3School How to Section of Building Carousel */
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    left: unset;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.65);
+}
+
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 17px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: Verdana, sans-serif;
+    font-size: 14px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+/* W3School How to Section CSS Ends Here */
+
+.hts-slideshow-container-box {
+    border: 6px solid #e3e6e8;
+    background-color: #e3e6e8;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.how-to-section-pillar {
+    height: 80px;
+    width: 50px;
+    margin: auto;
+    background-color: #282A35;
+}
+
+@media (max-width: 500px) {
+    .how-to-section-pillar {
+        height: 45px;
+        width: 40px;
+        margin: auto;
+        background-color: #282A35;
+    }
+}
+
+.how-to-section-btn {
+    font-size: 20px;
+    background-color: rgb(13, 23, 33);
+    color: white;
+    border: none;
+    border-radius: 25px;
+    line-height: 30px;
+    padding: 16px;
+    width: 50%;
+    font-weight: 600;
+    font-family: "Source Sans 3", sans-serif;
+}
+
+@media (max-width:600px) {
+    .how-to-section-btn {
+        width: 100% !important;
+    }
 }
